# setterboxd

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setterboxd.py
.claude/: settings.json
.github/workflows/: ci.yml
